# discord-advertisement-framework

./: -David's dungeon.txt  .flake8  .gitignore  .readthedocs.yml  Config.py  DOC.md  FE UNI.txt  LICENSE  LICENSE.md  MANIFEST.in  Procfile  README.md  README.rst  README_pypi.rst  Template.txt  Windows PowerShell.lnk  _David's dungeon.txt  debug.py  delavnice_params.txt  framework.py  h.json  install.ps1  install.sh  main.py  nohup.out  obvestilo-generator.py  optional.json  pyinstaller.txt  pyproject.toml  requirements.txt  run.sh  setup-universal.py  setup.py  shill_main.py  ssfe.json  supernatural.json  test.db  test.json  test.py  version.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bugs.yaml  feature_request.md  features.yml
.github/codeql/: codeql-config.yml
.github/workflows/: build_exe.yml  c-cpp.yml  codeql-analysis.yml  (+7 more)
Documentation/: DOC.html  DOC.md
Examples/: main_data_function.py  main_send_embed.py  main_send_file.py  main_send_multiple.py  main_send_string.py  secret.py
FE_UNI/: arduino.py  uni.py
Logging/: #David's dungeon.md
Patches/: 1_client.patch  1_rename.patch  2_client.patch  2_http.patch  3_client.patch  3_gateway.patch  3_get_relations.patch  4_version.patch  5_interactions.patch  5_user_headers.patch  6_embeds.patch  6_state.patch  7_state.patch  client.py.patch  http.patch  http.py.patch  http_rate_limit.patch  http_useracc_ratelimit.patch  rename.patch  user_token.patch
discord/: LICENCE  __init__.py  __main__.py  abc.py  activity.py  appinfo.py  asset.py  audit_logs.py  backoff.py  calls.py  channel.py  client.py  colour.py  context_managers.py  embeds.py  emoji.py  enums.py  errors.py  file.py  flags.py  gateway.py  guild.py  http.py  integrations.py  invite.py  iterators.py  member.py  mentions.py  message.py  mixins.py  object.py  oggparse.py  opus.py  partial_emoji.py  permissions.py  player.py  raw_models.py  reaction.py  relationship.py  role.py  (+9 more)
docs/: Makefile  build-latex-win.sh  dep_local.json  install.ps1  install.sh  requirements.txt  setup.py
documentation_dep/: image.psd
framework/: __init__.py  framework.py
requirements/: docs.txt  mandatory.txt  sql.txt  testing.txt  voice.txt  web.txt
setup_build_env_do_not_run/: install.ps1  install.sh
src/: framework.py  main_send_multiple.py  secret.py
testing/: conftest.py  direct_main_send_multiple.py  find_promo_channels.py  secret.py  sql_main_rickroll.py  test_autogen.py  test_events.py  test_logging.py  test_period.py  test_period_dynamic.py  test_remote.py  test_removal.py  test_responder.py  test_send_dynamic.py  test_send_normal.py  test_serialization.py  test_update.py  test_util.py  text_main_send_multiple.py  voice_data_function.py
(+471 files in other folders)
