[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel",
]

build-backend = "setuptools.build_meta"


[project]
name = "discord-advert-framework"
authors = [
    {name = "David Hozic"}
]
description = "Framework for periodic advertisements on Discord"
readme = "README.rst"
requires-python = ">=3.9"
keywords = ["Discord", "Advertising", "Framework", "NFT", "Shilling"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


dynamic = ["dependencies", "optional-dependencies", "version"]

[project.gui-scripts]
daf-gui="daf_gui:main.run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = {file = "requirements/mandatory.txt"}
version = {attr = "daf.VERSION"}

[tool.setuptools.dynamic.optional-dependencies]
docs = {file = "requirements/docs.txt"}
voice = {file = "requirements/voice.txt"}
sql = {file = "requirements/sql.txt"}
testing = {file = "requirements/testing.txt"}
web = {file = "requirements/web.txt"}
[tool.setuptools.dynamic.optional-dependencies.all]
file = [
    "requirements/voice.txt",
    "requirements/sql.txt",
    "requirements/web.txt"
]

[tool.setuptools.packages.find]
where = [
    "src"
]

[tool.pytest.ini_options]
markers = [
    "group_remote",
]
asyncio_mode = "auto"
